--- a/Portafolio_OAEA/Views/Shared/_Layout.cshtml
+++ b/Portafolio_OAEA/Views/Shared/_Layout.cshtml
@@ -25,6 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                            <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Portafolio" asp-action="ListarP">Incio</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Proyectos" asp-action="MisProyectos"> Mis Proyectos </a>
+                        </li>
                     </ul>
                 </div>
             </div>
