YA CASI FINALIZADO

--- a/Portafolio_OAEA/Views/Proyectos/MisProyectos.cshtml
+++ b/Portafolio_OAEA/Views/Proyectos/MisProyectos.cshtml
@@ -15,34 +15,26 @@
                 <tr>
                     <th>Nombre</th>
                     <th>Descripción</th>
+                    <th>Fecha</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Proyecto 1</td>
-                    <td>Descripción del Proyecto 1</td>
-                </tr>
-                <tr>
-                    <td>Proyecto 2</td>
-                    <td>Descripción del Proyecto 2</td>
-                </tr>
-                <!-- Puedes iterar sobre los proyectos y generar estas filas dinámicamente -->
-            </tbody>
-        </table>
-
-        <p><a href="/">Volver al inicio</a></p>
-
 
           <tbody>
         @foreach (var item in Model)
         {
                 <tr>
                     <td>@item.NombreProyecto</td>
-                   <td>@item.FechaCreado</td>
+                    <td>@item.Descripcion</td>
+                    <td>@item.FechaCreado</td>
                     
                     <!-- Agrega más columnas según sea necesario -->
                 </tr>
         }
-    </tbody>
+                 </tbody>
+                <!-- Puedes iterar sobre los proyectos y generar estas filas dinámicamente -->
+            </tbody>
+        </table>
+
+        <p><a href="/">Volver al inicio</a></p>
     </body>
     </html>
