--- a/Portafolio_OAEA/Views/Portafolio/ListarP.cshtml
+++ b/Portafolio_OAEA/Views/Portafolio/ListarP.cshtml
@@ -23,24 +23,24 @@
 <body>
     <header>
         <div class="Logo">
-            <img  src="~/Img/githublogo.png" alt="Tu Foto">
-            <a href="https://github.com/AlanEA04">
-                <img src="~~/Img/githublogo.png" alt="GitHup" />
-            </a>
+            <img src="~/Img/IMG_20230531_202440256_HDR (1) (1).png" width="500" height="500" alt="Tu Foto">
+           
              <p>  ¡Hola! Mi nombre es Omar Alan Encinas Amarillas y soy un estudiante  de desarrollo de software.  </p>
                 <p>Desde joven, he sentido una fascinación por el mundo de la tecnología </p>
                 <p> y cómo puede transformar nuestra forma de vivir y trabajar.</p>
+                <p> te dare a onocerm lo proyectos que he realizado  y Apis que he consumido a lo latgo de mi carrera </p>
+                <p>tambien te dejare mis redes sociales para que puedas </p>
         </div>
 
     </header>
 
     <section id="inicio">
         <div class="container">
-            <h2>Mi Portafolio Personal</h2>
-            <h3>Tecnico Superior</h3>
+            <h2></h2>
+            <h3></h3>
 
 
-            <p>Bienvenido a mi sitio web. Aquí puedes conocer más sobre mí y ver algunos de mis proyectos.</p>
+            <p></p>
 
         
 
@@ -53,11 +53,19 @@
         <div class="container">
             <h2>Contacto</h2>
             <p>Puedes contactarme en omar.encinas.cetis69@gmail.com o seguirme en mis redes sociales:</p>
-            <ul class="redes-sociales">
+            <a href="https://github.com/AlanEA04">
+                <img src="~/Img/githubLOGO.png" alt="GitHup" width="50" height="50" style="border-radius:50%;" />
+            </a>
+            <a href="https://www.facebook.com/omar.amarillas.75" >
+                <img src="~/Img/insta(3).jpg" alt="Facebook" width="50" height="50" style="border-radius:50%;" />
+            </a>
+            <a href="https://www.facebook.com/omar.amarillas.75">
+                <img src="~/Img/Face.png" alt="Facebook" width="50" height="50" style="border-radius:50%;" />
+            </a>
+           
           
-                <li><a href="https://www.facebook.com/tu-usuario-facebook"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://github.com/tu-usuario-github"><i class="fab fa-github"></i></a></li>
-            </ul>
+              
+            <></>
         </div>
     </section>
 
